fixtures/cs-hash-02/bad/method-in-class.tsx
import bcrypt from "bcrypt";

export class AuthService {
	hashPassword(password: string) {
		return bcrypt.hash(password, 7);
	}
}
